syntax = "proto3";

option go_package = ".;pb";

import "signin_message.proto";
import "signup_message.proto";
import "token_message.proto";
import "logout_message.proto";

service Authentication {
  rpc Signup (SignUpRequest) returns (SignUpResponse);
  rpc SignInWithMail (SignInForMailBaseRequest) returns (SignInForMailBaseResponse) {};
  rpc SignInWithPhone (SignInForPhoneBaseRequest) returns (SignInForPhoneBaseResponse) {};
  rpc ValidateOTP (ValidateOTPForPhoneBaseRequest) returns (ValidateOTPForPhoneBaseResponse) {};
  rpc GetNewToken (newTokenRequest) returns (newTokenResponse) {};
  rpc ContactConformation (ContactConformationRequest) returns (ContactConformationResponse) {};
  rpc ResendOTP (ResendOTPRequest) returns (ResendOTPResponse) {};
  rpc Logout (LogoutRequest) returns (LogoutResponse) {};
}
